# YAMFD

./: .gitignore  CMakeLists.txt  README.md  license.txt
include/: smc.h
src/: main.c  smc.c
